# reachy-mini-apps

./: .gitignore  ARCHITECTURE_GUIDE.md  README.md  SETUP_GUIDE.md  example_laptop_server.py  speaking_server.py
speaking_server/: CONVERSATION_MODE.md  COST_OPTIMIZATION.md  README.md  index.html  pyproject.toml
speaking_server/speaking_server/: aws_realtime.py  console.py  main.py  simple_recorder.py  vad.py
speaking_server/speaking_server/static/: index.html  main.js
test_hello_world/: ENV_SETUP.md  README.md  env.example  index.html  pyproject.toml
test_hello_world/test_hello_world/: main.py  utils.py
test_hello_world/test_hello_world/static/: index.html  main.js
