[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "speaking_server"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
speaking_server = "speaking_server.main:SpeakingServer"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
speaking_server = ["**/*"] # Also include all non-.py files