[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "speaking_server"
version = "0.2.8"
description = "Speaking Server with AWS Transcribe and Polly for Reachy Mini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "boto3>=1.34.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "amazon-transcribe>=0.6.0",  # Optional but recommended for better async support
    "webrtcvad>=2.0.10",  # Optional but recommended for better VAD accuracy
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
speaking_server = "speaking_server.main:SpeakingServer"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
speaking_server = ["**/*"] # Also include all non-.py files